parserNew/ParCoLa.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParCoLa.y
-----------------------------------------------------------------------------

state 235 contains 4 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pContract -> Contract                       (0)
	%start_pComponent -> Component                     (1)
	%start_pDefinition -> Definition                   (2)
	%start_pSimpleDefinition -> SimpleDefinition       (3)
	%start_pNumericalExpression -> NumericalExpression   (4)
	%start_pOperator -> Operator                       (5)
	%start_pConditionalDefinition -> ConditionalDefinition   (6)
	%start_pStatement -> Statement                     (7)
	%start_pConditionalStatement -> ConditionalStatement   (8)
	%start_pSimpleStatement -> SimpleStatement         (9)
	%start_pCondition -> Condition                     (10)
	%start_pSimpleCondition -> SimpleCondition         (11)
	%start_pBooleanExpression -> BooleanExpression     (12)
	%start_pID -> ID                                   (13)
	%start_pHolds -> Holds                             (14)
	%start_pSubject -> Subject                         (15)
	%start_pVerb -> Verb                               (16)
	%start_pVerbStatus -> VerbStatus                   (17)
	%start_pComparison -> Comparison                   (18)
	%start_pEqual -> Equal                             (19)
	%start_pMore -> More                               (20)
	%start_pModalVerb -> ModalVerb                     (21)
	%start_pObligation -> Obligation                   (22)
	%start_pDate -> Date                               (23)
	%start_pTemporalQuantifier -> TemporalQuantifier   (24)
	%start_pTemporalOffset -> TemporalOffset           (25)
	%start_pMonth -> Month                             (26)
	%start_pObject -> Object                           (27)
	%start_pNumericalObject -> NumericalObject         (28)
	%start_pPounds -> Pounds                           (29)
	%start_pDollars -> Dollars                         (30)
	%start_pEuros -> Euros                             (31)
	%start_pNonNumericalObject -> NonNumericalObject   (32)
	%start_pNum -> Num                                 (33)
	%start_pReceiver -> Receiver                       (34)
	Ident -> L_Ident                                   (35)
	Integer -> L_integ                                 (36)
	String -> L_quoted                                 (37)
	Contract ->                                        (38)
	Contract -> Component                              (39)
	Contract -> Component 'C-AND' Contract             (40)
	Component -> Definition                            (41)
	Component -> ConditionalDefinition                 (42)
	Component -> Statement                             (43)
	Component -> ConditionalStatement                  (44)
	Definition -> SimpleDefinition                     (45)
	Definition -> SimpleDefinition 'AND' Definition    (46)
	SimpleDefinition -> ID Subject 'IS' Subject        (47)
	SimpleDefinition -> ID Subject 'EQUALS' NumericalExpression   (48)
	NumericalExpression -> Num                         (49)
	NumericalExpression -> NumericalObject             (50)
	NumericalExpression -> NumericalExpression Operator NumericalExpression   (51)
	Operator -> 'PLUS'                                 (52)
	Operator -> 'MINUS'                                (53)
	Operator -> 'TIMES'                                (54)
	Operator -> 'DIVIDE'                               (55)
	ConditionalDefinition -> Definition 'IF' Condition   (56)
	ConditionalDefinition -> 'IF' Condition 'THEN' Definition   (57)
	Statement -> SimpleStatement                       (58)
	Statement -> SimpleStatement 'OR' Statement        (59)
	Statement -> SimpleStatement 'AND' Statement       (60)
	ConditionalStatement -> Statement 'IF' Condition   (61)
	ConditionalStatement -> 'IF' Condition 'THEN' Statement   (62)
	SimpleStatement -> ID Holds Subject ModalVerb Verb Object Receiver Date   (63)
	SimpleStatement -> ID Holds Subject Date ModalVerb Verb Object Receiver   (64)
	SimpleStatement -> ID Holds Date Subject ModalVerb Verb Object Receiver   (65)
	SimpleStatement -> ID Subject ModalVerb Verb Object Receiver Date   (66)
	SimpleStatement -> ID Subject Date ModalVerb Verb Object Receiver   (67)
	SimpleStatement -> ID Date Subject ModalVerb Verb Object Receiver   (68)
	Condition -> SimpleCondition                       (69)
	Condition -> SimpleCondition 'OR' Condition        (70)
	Condition -> SimpleCondition 'AND' Condition       (71)
	SimpleCondition -> ID Holds Subject VerbStatus Object Receiver Date   (72)
	SimpleCondition -> ID Holds Subject Date VerbStatus Object Receiver   (73)
	SimpleCondition -> ID Holds Date Subject VerbStatus Object Receiver   (74)
	SimpleCondition -> ID Holds Subject ModalVerb Verb Object Receiver Date   (75)
	SimpleCondition -> ID Holds BooleanExpression      (76)
	SimpleCondition -> ID Subject VerbStatus Object Receiver Date   (77)
	SimpleCondition -> ID Subject Date VerbStatus Object Receiver   (78)
	SimpleCondition -> ID Date Subject VerbStatus Object Receiver   (79)
	SimpleCondition -> ID Subject ModalVerb Verb Object Receiver Date   (80)
	SimpleCondition -> ID BooleanExpression            (81)
	BooleanExpression -> Subject VerbStatus Comparison Subject   (82)
	ID -> '[' Num ']'                                  (83)
	ID -> '[' Num '(' Num ')' ']'                      (84)
	Holds -> 'it' 'is' 'the' 'case' 'that'             (85)
	Holds -> 'it' 'is' 'not' 'the' 'case' 'that'       (86)
	Subject -> String                                  (87)
	Subject -> Ident                                   (88)
	Verb -> 'deliver'                                  (89)
	Verb -> 'pay'                                      (90)
	Verb -> 'charge'                                   (91)
	Verb -> 'refund'                                   (92)
	VerbStatus -> 'delivered'                          (93)
	VerbStatus -> 'paid'                               (94)
	VerbStatus -> 'charged'                            (95)
	VerbStatus -> 'refunded'                           (96)
	Comparison -> 'less' 'than'                        (97)
	Comparison -> Equal                                (98)
	Comparison -> More                                 (99)
	Equal -> 'equals'                                  (100)
	Equal -> 'equal' 'to'                              (101)
	More -> 'more' 'than'                              (102)
	More -> 'greater' 'than'                           (103)
	ModalVerb -> Obligation                            (104)
	ModalVerb -> 'may'                                 (105)
	ModalVerb -> 'is' 'forbidden' 'to'                 (106)
	Obligation -> 'shall'                              (107)
	Obligation -> 'must'                               (108)
	Date -> 'on' 'the' Num Month Num                   (109)
	Date -> 'on' 'ANYDATE'                             (110)
	Date -> 'on' 'SOMEDATE' Subject                    (111)
	Date -> 'on' 'THEDATE' Subject                     (112)
	Date -> TemporalQuantifier Num Month Num           (113)
	Date -> TemporalQuantifier TemporalOffset TemporalQuantifier 'THEDATE' Subject   (114)
	Date -> TemporalQuantifier TemporalOffset TemporalQuantifier 'SOMEDATE' Subject   (115)
	TemporalQuantifier -> 'after'                      (116)
	TemporalQuantifier -> 'before'                     (117)
	TemporalOffset -> Num 'day(s)'                     (118)
	TemporalOffset -> Num 'year(s)'                    (119)
	TemporalOffset -> Num 'week(s)'                    (120)
	Month -> 'January'                                 (121)
	Month -> 'February'                                (122)
	Month -> 'March'                                   (123)
	Month -> 'April'                                   (124)
	Month -> 'May'                                     (125)
	Month -> 'June'                                    (126)
	Month -> 'July'                                    (127)
	Month -> 'August'                                  (128)
	Month -> 'September'                               (129)
	Month -> 'October'                                 (130)
	Month -> 'November'                                (131)
	Month -> 'December'                                (132)
	Object -> NumericalObject                          (133)
	Object -> NonNumericalObject                       (134)
	NumericalObject -> Pounds Num                      (135)
	NumericalObject -> Dollars Num                     (136)
	NumericalObject -> Euros Num                       (137)
	NumericalObject -> 'AMOUNT' Subject                (138)
	Pounds -> 'GBP'                                    (139)
	Pounds -> 'POUNDS'                                 (140)
	Pounds -> 'quid'                                   (141)
	Dollars -> 'USD'                                   (142)
	Dollars -> 'DOLLARS'                               (143)
	Dollars -> 'buck'                                  (144)
	Euros -> 'EUR'                                     (145)
	Euros -> 'EUROS'                                   (146)
	NonNumericalObject -> 'SOMECURRENCY' Subject       (147)
	NonNumericalObject -> 'REPORT' Subject             (148)
	NonNumericalObject -> 'NAMEDOBJECT' Subject        (149)
	NonNumericalObject -> 'OTHEROBJECT' Subject        (150)
	Num -> Integer                                     (151)
	Receiver -> 'to' Subject                           (152)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'AMOUNT'       { PT _ (TS _ 3) }
	'AND'          { PT _ (TS _ 4) }
	'ANYDATE'      { PT _ (TS _ 5) }
	'April'        { PT _ (TS _ 6) }
	'August'       { PT _ (TS _ 7) }
	'C-AND'        { PT _ (TS _ 8) }
	'DIVIDE'       { PT _ (TS _ 9) }
	'DOLLARS'      { PT _ (TS _ 10) }
	'December'     { PT _ (TS _ 11) }
	'EQUALS'       { PT _ (TS _ 12) }
	'EUR'          { PT _ (TS _ 13) }
	'EUROS'        { PT _ (TS _ 14) }
	'February'     { PT _ (TS _ 15) }
	'GBP'          { PT _ (TS _ 16) }
	'IF'           { PT _ (TS _ 17) }
	'IS'           { PT _ (TS _ 18) }
	'January'      { PT _ (TS _ 19) }
	'July'         { PT _ (TS _ 20) }
	'June'         { PT _ (TS _ 21) }
	'MINUS'        { PT _ (TS _ 22) }
	'March'        { PT _ (TS _ 23) }
	'May'          { PT _ (TS _ 24) }
	'NAMEDOBJECT'  { PT _ (TS _ 25) }
	'November'     { PT _ (TS _ 26) }
	'OR'           { PT _ (TS _ 27) }
	'OTHEROBJECT'  { PT _ (TS _ 28) }
	'October'      { PT _ (TS _ 29) }
	'PLUS'         { PT _ (TS _ 30) }
	'POUNDS'       { PT _ (TS _ 31) }
	'REPORT'       { PT _ (TS _ 32) }
	'SOMECURRENCY' { PT _ (TS _ 33) }
	'SOMEDATE'     { PT _ (TS _ 34) }
	'September'    { PT _ (TS _ 35) }
	'THEDATE'      { PT _ (TS _ 36) }
	'THEN'         { PT _ (TS _ 37) }
	'TIMES'        { PT _ (TS _ 38) }
	'USD'          { PT _ (TS _ 39) }
	'['            { PT _ (TS _ 40) }
	']'            { PT _ (TS _ 41) }
	'after'        { PT _ (TS _ 42) }
	'before'       { PT _ (TS _ 43) }
	'buck'         { PT _ (TS _ 44) }
	'case'         { PT _ (TS _ 45) }
	'charge'       { PT _ (TS _ 46) }
	'charged'      { PT _ (TS _ 47) }
	'day(s)'       { PT _ (TS _ 48) }
	'deliver'      { PT _ (TS _ 49) }
	'delivered'    { PT _ (TS _ 50) }
	'equal'        { PT _ (TS _ 51) }
	'equals'       { PT _ (TS _ 52) }
	'forbidden'    { PT _ (TS _ 53) }
	'greater'      { PT _ (TS _ 54) }
	'is'           { PT _ (TS _ 55) }
	'it'           { PT _ (TS _ 56) }
	'less'         { PT _ (TS _ 57) }
	'may'          { PT _ (TS _ 58) }
	'more'         { PT _ (TS _ 59) }
	'must'         { PT _ (TS _ 60) }
	'not'          { PT _ (TS _ 61) }
	'on'           { PT _ (TS _ 62) }
	'paid'         { PT _ (TS _ 63) }
	'pay'          { PT _ (TS _ 64) }
	'quid'         { PT _ (TS _ 65) }
	'refund'       { PT _ (TS _ 66) }
	'refunded'     { PT _ (TS _ 67) }
	'shall'        { PT _ (TS _ 68) }
	'than'         { PT _ (TS _ 69) }
	'that'         { PT _ (TS _ 70) }
	'the'          { PT _ (TS _ 71) }
	'to'           { PT _ (TS _ 72) }
	'week(s)'      { PT _ (TS _ 73) }
	'year(s)'      { PT _ (TS _ 74) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pContract rule  0
	%start_pComponent rule  1
	%start_pDefinition rule  2
	%start_pSimpleDefinition rule  3
	%start_pNumericalExpression rule  4
	%start_pOperator rule  5
	%start_pConditionalDefinition rule  6
	%start_pStatement rule  7
	%start_pConditionalStatement rule  8
	%start_pSimpleStatement rule  9
	%start_pCondition rule  10
	%start_pSimpleCondition rule  11
	%start_pBooleanExpression rule  12
	%start_pID      rule  13
	%start_pHolds   rule  14
	%start_pSubject rule  15
	%start_pVerb    rule  16
	%start_pVerbStatus rule  17
	%start_pComparison rule  18
	%start_pEqual   rule  19
	%start_pMore    rule  20
	%start_pModalVerb rule  21
	%start_pObligation rule  22
	%start_pDate    rule  23
	%start_pTemporalQuantifier rule  24
	%start_pTemporalOffset rule  25
	%start_pMonth   rule  26
	%start_pObject  rule  27
	%start_pNumericalObject rule  28
	%start_pPounds  rule  29
	%start_pDollars rule  30
	%start_pEuros   rule  31
	%start_pNonNumericalObject rule  32
	%start_pNum     rule  33
	%start_pReceiver rule  34
	Ident           rule  35
	Integer         rule  36
	String          rule  37
	Contract        rules 38, 39, 40
	Component       rules 41, 42, 43, 44
	Definition      rules 45, 46
	SimpleDefinition rules 47, 48
	NumericalExpression rules 49, 50, 51
	Operator        rules 52, 53, 54, 55
	ConditionalDefinition rules 56, 57
	Statement       rules 58, 59, 60
	ConditionalStatement rules 61, 62
	SimpleStatement rules 63, 64, 65, 66, 67, 68
	Condition       rules 69, 70, 71
	SimpleCondition rules 72, 73, 74, 75, 76, 77, 78, 79, 80, 81
	BooleanExpression rule  82
	ID              rules 83, 84
	Holds           rules 85, 86
	Subject         rules 87, 88
	Verb            rules 89, 90, 91, 92
	VerbStatus      rules 93, 94, 95, 96
	Comparison      rules 97, 98, 99
	Equal           rules 100, 101
	More            rules 102, 103
	ModalVerb       rules 104, 105, 106
	Obligation      rules 107, 108
	Date            rules 109, 110, 111, 112, 113, 114, 115
	TemporalQuantifier rules 116, 117
	TemporalOffset  rules 118, 119, 120
	Month           rules 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132
	Object          rules 133, 134
	NumericalObject rules 135, 136, 137, 138
	Pounds          rules 139, 140, 141
	Dollars         rules 142, 143, 144
	Euros           rules 145, 146
	NonNumericalObject rules 147, 148, 149, 150
	Num             rule  151
	Receiver        rule  152

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pContract -> . Contract                      (rule 0)

	'IF'           shift, and enter state 156
	'['            shift, and enter state 121
	%eof           reduce using rule 38

	Contract       goto state 157
	Component      goto state 158
	Definition     goto state 151
	SimpleDefinitiongoto state 136
	ConditionalDefinitiongoto state 152
	Statement      goto state 153
	ConditionalStatementgoto state 154
	SimpleStatementgoto state 132
	ID             goto state 155

State 1

	%start_pComponent -> . Component                    (rule 1)

	'IF'           shift, and enter state 156
	'['            shift, and enter state 121

	Component      goto state 150
	Definition     goto state 151
	SimpleDefinitiongoto state 136
	ConditionalDefinitiongoto state 152
	Statement      goto state 153
	ConditionalStatementgoto state 154
	SimpleStatementgoto state 132
	ID             goto state 155

State 2

	%start_pDefinition -> . Definition                  (rule 2)

	'['            shift, and enter state 121

	Definition     goto state 149
	SimpleDefinitiongoto state 136
	ID             goto state 138

State 3

	%start_pSimpleDefinition -> . SimpleDefinition      (rule 3)

	'['            shift, and enter state 121

	SimpleDefinitiongoto state 148
	ID             goto state 138

State 4

	%start_pNumericalExpression -> . NumericalExpression    (rule 4)

	'AMOUNT'       shift, and enter state 62
	'DOLLARS'      shift, and enter state 51
	'EUR'          shift, and enter state 48
	'EUROS'        shift, and enter state 49
	'GBP'          shift, and enter state 55
	'POUNDS'       shift, and enter state 56
	'USD'          shift, and enter state 52
	'buck'         shift, and enter state 53
	'quid'         shift, and enter state 57
	L_integ        shift, and enter state 41

	Integer        goto state 39
	NumericalExpressiongoto state 145
	NumericalObjectgoto state 146
	Pounds         goto state 59
	Dollars        goto state 60
	Euros          goto state 61
	Num            goto state 147

State 5

	%start_pOperator -> . Operator                      (rule 5)

	'DIVIDE'       shift, and enter state 141
	'MINUS'        shift, and enter state 142
	'PLUS'         shift, and enter state 143
	'TIMES'        shift, and enter state 144

	Operator       goto state 140

State 6

	%start_pConditionalDefinition -> . ConditionalDefinition    (rule 6)

	'IF'           shift, and enter state 139
	'['            shift, and enter state 121

	Definition     goto state 135
	SimpleDefinitiongoto state 136
	ConditionalDefinitiongoto state 137
	ID             goto state 138

State 7

	%start_pStatement -> . Statement                    (rule 7)

	'['            shift, and enter state 121

	Statement      goto state 134
	SimpleStatementgoto state 132
	ID             goto state 129

State 8

	%start_pConditionalStatement -> . ConditionalStatement    (rule 8)

	'IF'           shift, and enter state 133
	'['            shift, and enter state 121

	Statement      goto state 130
	ConditionalStatementgoto state 131
	SimpleStatementgoto state 132
	ID             goto state 129

State 9

	%start_pSimpleStatement -> . SimpleStatement        (rule 9)

	'['            shift, and enter state 121

	SimpleStatementgoto state 128
	ID             goto state 129

State 10

	%start_pCondition -> . Condition                    (rule 10)

	'['            shift, and enter state 121

	Condition      goto state 126
	SimpleConditiongoto state 127
	ID             goto state 125

State 11

	%start_pSimpleCondition -> . SimpleCondition        (rule 11)

	'['            shift, and enter state 121

	SimpleConditiongoto state 124
	ID             goto state 125

State 12

	%start_pBooleanExpression -> . BooleanExpression    (rule 12)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	BooleanExpressiongoto state 122
	Subject        goto state 123

State 13

	%start_pID -> . ID                                  (rule 13)

	'['            shift, and enter state 121

	ID             goto state 120

State 14

	%start_pHolds -> . Holds                            (rule 14)

	'it'           shift, and enter state 119

	Holds          goto state 118

State 15

	%start_pSubject -> . Subject                        (rule 15)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	Subject        goto state 116

State 16

	%start_pVerb -> . Verb                              (rule 16)

	'charge'       shift, and enter state 110
	'deliver'      shift, and enter state 111
	'pay'          shift, and enter state 112
	'refund'       shift, and enter state 113

	Verb           goto state 109

State 17

	%start_pVerbStatus -> . VerbStatus                  (rule 17)

	'charged'      shift, and enter state 105
	'delivered'    shift, and enter state 106
	'paid'         shift, and enter state 107
	'refunded'     shift, and enter state 108

	VerbStatus     goto state 104

State 18

	%start_pComparison -> . Comparison                  (rule 18)

	'equal'        shift, and enter state 98
	'equals'       shift, and enter state 99
	'greater'      shift, and enter state 95
	'less'         shift, and enter state 103
	'more'         shift, and enter state 96

	Comparison     goto state 100
	Equal          goto state 101
	More           goto state 102

State 19

	%start_pEqual -> . Equal                            (rule 19)

	'equal'        shift, and enter state 98
	'equals'       shift, and enter state 99

	Equal          goto state 97

State 20

	%start_pMore -> . More                              (rule 20)

	'greater'      shift, and enter state 95
	'more'         shift, and enter state 96

	More           goto state 94

State 21

	%start_pModalVerb -> . ModalVerb                    (rule 21)

	'is'           shift, and enter state 92
	'may'          shift, and enter state 93
	'must'         shift, and enter state 88
	'shall'        shift, and enter state 89

	ModalVerb      goto state 90
	Obligation     goto state 91

State 22

	%start_pObligation -> . Obligation                  (rule 22)

	'must'         shift, and enter state 88
	'shall'        shift, and enter state 89

	Obligation     goto state 87

State 23

	%start_pDate -> . Date                              (rule 23)

	'after'        shift, and enter state 82
	'before'       shift, and enter state 83
	'on'           shift, and enter state 86

	Date           goto state 84
	TemporalQuantifiergoto state 85

State 24

	%start_pTemporalQuantifier -> . TemporalQuantifier    (rule 24)

	'after'        shift, and enter state 82
	'before'       shift, and enter state 83

	TemporalQuantifiergoto state 81

State 25

	%start_pTemporalOffset -> . TemporalOffset          (rule 25)

	L_integ        shift, and enter state 41

	Integer        goto state 39
	TemporalOffset goto state 79
	Num            goto state 80

State 26

	%start_pMonth -> . Month                            (rule 26)

	'April'        shift, and enter state 67
	'August'       shift, and enter state 68
	'December'     shift, and enter state 69
	'February'     shift, and enter state 70
	'January'      shift, and enter state 71
	'July'         shift, and enter state 72
	'June'         shift, and enter state 73
	'March'        shift, and enter state 74
	'May'          shift, and enter state 75
	'November'     shift, and enter state 76
	'October'      shift, and enter state 77
	'September'    shift, and enter state 78

	Month          goto state 66

State 27

	%start_pObject -> . Object                          (rule 27)

	'AMOUNT'       shift, and enter state 62
	'DOLLARS'      shift, and enter state 51
	'EUR'          shift, and enter state 48
	'EUROS'        shift, and enter state 49
	'GBP'          shift, and enter state 55
	'NAMEDOBJECT'  shift, and enter state 43
	'OTHEROBJECT'  shift, and enter state 44
	'POUNDS'       shift, and enter state 56
	'REPORT'       shift, and enter state 45
	'SOMECURRENCY' shift, and enter state 46
	'USD'          shift, and enter state 52
	'buck'         shift, and enter state 53
	'quid'         shift, and enter state 57

	Object         goto state 63
	NumericalObjectgoto state 64
	Pounds         goto state 59
	Dollars        goto state 60
	Euros          goto state 61
	NonNumericalObjectgoto state 65

State 28

	%start_pNumericalObject -> . NumericalObject        (rule 28)

	'AMOUNT'       shift, and enter state 62
	'DOLLARS'      shift, and enter state 51
	'EUR'          shift, and enter state 48
	'EUROS'        shift, and enter state 49
	'GBP'          shift, and enter state 55
	'POUNDS'       shift, and enter state 56
	'USD'          shift, and enter state 52
	'buck'         shift, and enter state 53
	'quid'         shift, and enter state 57

	NumericalObjectgoto state 58
	Pounds         goto state 59
	Dollars        goto state 60
	Euros          goto state 61

State 29

	%start_pPounds -> . Pounds                          (rule 29)

	'GBP'          shift, and enter state 55
	'POUNDS'       shift, and enter state 56
	'quid'         shift, and enter state 57

	Pounds         goto state 54

State 30

	%start_pDollars -> . Dollars                        (rule 30)

	'DOLLARS'      shift, and enter state 51
	'USD'          shift, and enter state 52
	'buck'         shift, and enter state 53

	Dollars        goto state 50

State 31

	%start_pEuros -> . Euros                            (rule 31)

	'EUR'          shift, and enter state 48
	'EUROS'        shift, and enter state 49

	Euros          goto state 47

State 32

	%start_pNonNumericalObject -> . NonNumericalObject    (rule 32)

	'NAMEDOBJECT'  shift, and enter state 43
	'OTHEROBJECT'  shift, and enter state 44
	'REPORT'       shift, and enter state 45
	'SOMECURRENCY' shift, and enter state 46

	NonNumericalObjectgoto state 42

State 33

	%start_pNum -> . Num                                (rule 33)

	L_integ        shift, and enter state 41

	Integer        goto state 39
	Num            goto state 40

State 34

	%start_pReceiver -> . Receiver                      (rule 34)

	'to'           shift, and enter state 38

	Receiver       goto state 37

State 35

	Ident -> . L_Ident                                  (rule 35)

	L_Ident        shift, and enter state 36


State 36

	Ident -> L_Ident .                                  (rule 35)

	'AND'          reduce using rule 35
	'C-AND'        reduce using rule 35
	'DIVIDE'       reduce using rule 35
	'EQUALS'       reduce using rule 35
	'IF'           reduce using rule 35
	'IS'           reduce using rule 35
	'MINUS'        reduce using rule 35
	'OR'           reduce using rule 35
	'PLUS'         reduce using rule 35
	'THEN'         reduce using rule 35
	'TIMES'        reduce using rule 35
	'after'        reduce using rule 35
	'before'       reduce using rule 35
	'charged'      reduce using rule 35
	'delivered'    reduce using rule 35
	'is'           reduce using rule 35
	'may'          reduce using rule 35
	'must'         reduce using rule 35
	'on'           reduce using rule 35
	'paid'         reduce using rule 35
	'refunded'     reduce using rule 35
	'shall'        reduce using rule 35
	'to'           reduce using rule 35
	L_Ident        reduce using rule 35
	L_quoted       reduce using rule 35
	%eof           reduce using rule 35


State 37

	%start_pReceiver -> Receiver .                      (rule 34)

	%eof           accept


State 38

	Receiver -> 'to' . Subject                          (rule 152)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	Subject        goto state 205

State 39

	Num -> Integer .                                    (rule 151)

	'('            reduce using rule 151
	')'            reduce using rule 151
	'AND'          reduce using rule 151
	'April'        reduce using rule 151
	'August'       reduce using rule 151
	'C-AND'        reduce using rule 151
	'DIVIDE'       reduce using rule 151
	'December'     reduce using rule 151
	'February'     reduce using rule 151
	'IF'           reduce using rule 151
	'January'      reduce using rule 151
	'July'         reduce using rule 151
	'June'         reduce using rule 151
	'MINUS'        reduce using rule 151
	'March'        reduce using rule 151
	'May'          reduce using rule 151
	'November'     reduce using rule 151
	'OR'           reduce using rule 151
	'October'      reduce using rule 151
	'PLUS'         reduce using rule 151
	'September'    reduce using rule 151
	'THEN'         reduce using rule 151
	'TIMES'        reduce using rule 151
	']'            reduce using rule 151
	'charged'      reduce using rule 151
	'day(s)'       reduce using rule 151
	'delivered'    reduce using rule 151
	'is'           reduce using rule 151
	'may'          reduce using rule 151
	'must'         reduce using rule 151
	'paid'         reduce using rule 151
	'refunded'     reduce using rule 151
	'shall'        reduce using rule 151
	'to'           reduce using rule 151
	'week(s)'      reduce using rule 151
	'year(s)'      reduce using rule 151
	L_Ident        reduce using rule 151
	L_quoted       reduce using rule 151
	%eof           reduce using rule 151


State 40

	%start_pNum -> Num .                                (rule 33)

	%eof           accept


State 41

	Integer -> L_integ .                                (rule 36)

	'('            reduce using rule 36
	')'            reduce using rule 36
	'AND'          reduce using rule 36
	'April'        reduce using rule 36
	'August'       reduce using rule 36
	'C-AND'        reduce using rule 36
	'DIVIDE'       reduce using rule 36
	'December'     reduce using rule 36
	'February'     reduce using rule 36
	'IF'           reduce using rule 36
	'January'      reduce using rule 36
	'July'         reduce using rule 36
	'June'         reduce using rule 36
	'MINUS'        reduce using rule 36
	'March'        reduce using rule 36
	'May'          reduce using rule 36
	'November'     reduce using rule 36
	'OR'           reduce using rule 36
	'October'      reduce using rule 36
	'PLUS'         reduce using rule 36
	'September'    reduce using rule 36
	'THEN'         reduce using rule 36
	'TIMES'        reduce using rule 36
	']'            reduce using rule 36
	'charged'      reduce using rule 36
	'day(s)'       reduce using rule 36
	'delivered'    reduce using rule 36
	'is'           reduce using rule 36
	'may'          reduce using rule 36
	'must'         reduce using rule 36
	'paid'         reduce using rule 36
	'refunded'     reduce using rule 36
	'shall'        reduce using rule 36
	'to'           reduce using rule 36
	'week(s)'      reduce using rule 36
	'year(s)'      reduce using rule 36
	L_Ident        reduce using rule 36
	L_quoted       reduce using rule 36
	%eof           reduce using rule 36


State 42

	%start_pNonNumericalObject -> NonNumericalObject .    (rule 32)

	%eof           accept


State 43

	NonNumericalObject -> 'NAMEDOBJECT' . Subject       (rule 149)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	Subject        goto state 204

State 44

	NonNumericalObject -> 'OTHEROBJECT' . Subject       (rule 150)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	Subject        goto state 203

State 45

	NonNumericalObject -> 'REPORT' . Subject            (rule 148)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	Subject        goto state 202

State 46

	NonNumericalObject -> 'SOMECURRENCY' . Subject      (rule 147)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	Subject        goto state 201

State 47

	%start_pEuros -> Euros .                            (rule 31)

	%eof           accept


State 48

	Euros -> 'EUR' .                                    (rule 145)

	L_integ        reduce using rule 145
	%eof           reduce using rule 145


State 49

	Euros -> 'EUROS' .                                  (rule 146)

	L_integ        reduce using rule 146
	%eof           reduce using rule 146


State 50

	%start_pDollars -> Dollars .                        (rule 30)

	%eof           accept


State 51

	Dollars -> 'DOLLARS' .                              (rule 143)

	L_integ        reduce using rule 143
	%eof           reduce using rule 143


State 52

	Dollars -> 'USD' .                                  (rule 142)

	L_integ        reduce using rule 142
	%eof           reduce using rule 142


State 53

	Dollars -> 'buck' .                                 (rule 144)

	L_integ        reduce using rule 144
	%eof           reduce using rule 144


State 54

	%start_pPounds -> Pounds .                          (rule 29)

	%eof           accept


State 55

	Pounds -> 'GBP' .                                   (rule 139)

	L_integ        reduce using rule 139
	%eof           reduce using rule 139


State 56

	Pounds -> 'POUNDS' .                                (rule 140)

	L_integ        reduce using rule 140
	%eof           reduce using rule 140


State 57

	Pounds -> 'quid' .                                  (rule 141)

	L_integ        reduce using rule 141
	%eof           reduce using rule 141


State 58

	%start_pNumericalObject -> NumericalObject .        (rule 28)

	%eof           accept


State 59

	NumericalObject -> Pounds . Num                     (rule 135)

	L_integ        shift, and enter state 41

	Integer        goto state 39
	Num            goto state 200

State 60

	NumericalObject -> Dollars . Num                    (rule 136)

	L_integ        shift, and enter state 41

	Integer        goto state 39
	Num            goto state 199

State 61

	NumericalObject -> Euros . Num                      (rule 137)

	L_integ        shift, and enter state 41

	Integer        goto state 39
	Num            goto state 198

State 62

	NumericalObject -> 'AMOUNT' . Subject               (rule 138)

	L_Ident        shift, and enter state 36
	L_quoted       shift, and enter state 117

	Ident          goto state 114
	String         goto state 115
	Subject        goto state 197

State 63

	%start_pObject -> Object .                          (rule 27)

	%eof           accept


State 64

	Object -> NumericalObject .                         (rule 133)

	'to'           reduce using rule 133
	%eof           reduce using rule 133


State 65

	Object -> NonNumericalObject .                      (rule 134)

	'to'           reduce using rule 134
	%eof           reduce using rule 134


State 66

	%start_pMonth -> Month .                            (rule 26)

	%eof           accept


State 67

	Month -> 'April' .                                  (rule 124)

	L_integ        reduce using rule 124
	%eof           reduce using rule 124


State 68

	Month -> 'August' .                                 (rule 128)

	L_integ        reduce using rule 128
	%eof           reduce using rule 128


State 69

	Month -> 'December' .                               (rule 132)

	L_integ        reduce using rule 132
	%eof           reduce using rule 132


State 70

	Month -> 'February' .                               (rule 122)

	L_integ        reduce using rule 122
	%eof           reduce using rule 122


State 71

	Month -> 'January' .                                (rule 121)

	L_integ        reduce using rule 121
	%eof           reduce using rule 121


State 72

	Month -> 'July' .                                   (rule 127)

	L_integ        reduce using rule 127
	%eof           reduce using rule 127


State 73

	Month -> 'June' .                                   (rule 126)

	L_integ        reduce using rule 126
	%eof           reduce using rule 126


State 74

	Month -> 'March' .                                  (rule 123)

	L_integ        reduce using rule 123
	%eof           reduce using rule 123


State 75

	Month -> 'May' .                                    (rule 125)

	L_integ        reduce using rule 125
	%eof           reduce using rule 125


State 76

	Month -> 'November' .                               (rule 131)

	L_integ        reduce using rule 131
	%eof           reduce using rule 131


State 77
